# AWS-Serverless-URL-Shortener

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  URL_shortener_working_images.md  architecture.md  build.sh  main.tf  outputs.tf  pyproject.toml  pytest.ini  readme.md  requirements.txt  samconfig.toml  template.yaml  terraform.tfstate  terraform.tfstate.backup  test_lambda.py  url-shortener-enhanced.html  variables.tf
.github/workflows/: ci.yml
Downloads/aws-serverless-url-shortener/: README.md  template.yaml
Downloads/aws-serverless-url-shortener/lambda/: create_short_url.py  redirect_url.py
Downloads/aws-serverless-url-shortener/terraform/: main.tf  outputs.tf  variables.tf
lambda/: create_short_url.py  get_analytics.py  redirect_url.py
lambda_create/: main.py
lambda_redirect/: main.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_create_short_url.py  test_get_analytics.py  test_redirect_url.py
